--- a/app/views/tours/_form.html.erb
+++ b/app/views/tours/_form.html.erb
@@ -17,7 +17,7 @@
 
   <div class="field">
     <%= f.label :name, 'Title:' %><br>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, placeholder: 'My Tour' %>
   </div>
   <div>
     <%= f.label :city, 'City:' %><br>
@@ -33,9 +33,21 @@
   </div>
   <div class="field">
     <%= f.label :description %><br>
-    <%= f.text_area :description %>
+    <%= f.text_area :description, placeholder: 'Fun times ahead!' %>
   </div>
   <div class="actions">
     <%= f.submit %>
   </div>
+  
+  <!--
+  <div class="field">>
+    <%= f.label :tour_stops, 'Tour stops:' %><br>
+    <%= f.text_field :tour_stops %>
+  </div>
+  
+  <div class="field">
+    <%= f.label :users, 'Invitees:' %><br>
+    <%= f.text_field :users %>
+  </div>
+  -->
 <% end %>
