--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,6 +16,7 @@
         <td><%= user.name %></td>
         <td><%= user.email %></td>
         <td><%= image_tag avatar_url(user), size:"48" %></td>
+        <td><%= link_to 'Add friend', friendships_path(friend_id: user), method: :post %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
