Acting on a proposal.

--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -27,6 +27,6 @@
 <%= link_to "Find friends", users_path %>
 <ol>
 <% Friendship.where(user_id: @current_user.id).each do |friendship| %>
-    <li><%= User.where(id: friendship.friend_id).first.name %></li>
+    <li><%= image_tag avatar_url(User.find(friendship.friend_id)) %><%= User.find(friendship.friend_id).name %></li>
 <% end %>
 </ol>
