--- a/app/views/tours/_voting_line_item.html.erb
+++ b/app/views/tours/_voting_line_item.html.erb
@@ -1,9 +1,16 @@
 <li>
-<%= tour_stop.total_score %>
-<%= tour_stop.venue.name %>
-<%= button_to "^", votes_tally_path(tour_stop_id: tour_stop.to_param, score: 1) %>
-<%= button_to "v", votes_tally_path(tour_stop_id: tour_stop.to_param, score: -1) %>
-<%= link_to "Post a comment!", new_comment_path(tour_stop_id: tour_stop.to_param) %>
+  <%= tour_stop.total_score %>
+  <%= tour_stop.venue.name %>
+  <%= tour_stop.status %>
+  <%= button_to "^", votes_tally_path(tour_stop_id: tour_stop.to_param, score: 1) %>
+  <%= button_to "v", votes_tally_path(tour_stop_id: tour_stop.to_param, score: -1) %>
+  
+  <%= hidden_div_if(!(@current_user === @tour.organizer)) do %>
+    <%= render partial: "status_decision_buttons", locals: {tour_stop: tour_stop} %>
+  <% end %>
+  
+  <%= link_to "Post a comment!", new_comment_path(tour_stop_id: tour_stop.to_param) %>
+  
   <div class="comment">
     <%= render partial: "comment", collection: tour_stop.comments, as: :comment %>
   </div>  
@@ -18,3 +25,6 @@
   <% end %>
 <% end %>
 -->
+
+
+<!--<%= button_to "Accept", tour_stop_path(tour_stop, status: "yes"), method: :patch %>-->
