--- a/app/views/tours/_voting_line_item.html.erb
+++ b/app/views/tours/_voting_line_item.html.erb
@@ -7,7 +7,7 @@
     <%= button_to "^", votes_tally_path(tour_stop_id: tour_stop.to_param, score: 1) %>
     <%= button_to "v", votes_tally_path(tour_stop_id: tour_stop.to_param, score: -1) %>
     
-    <%= hidden_div_if(!(@current_user === @tour.organizer)) do %>
+    <%= hidden_div_if(!@tour.organized_by?(@current_user)) do %>
       <%= render partial: "status_decision_buttons", locals: {tour_stop: tour_stop} %>
     <% end %>
     
