--- a/app/views/tours/_comment.html.erb
+++ b/app/views/tours/_comment.html.erb
@@ -2,5 +2,6 @@
   <span class="comment-text"><%= comment.text %></span>
   <span class="comment-commenter"><%= comment.commenter.name %></span>
   <span class="comment-time"><%= comment.created_at.strftime("%A, %b %e '%y at %I:%M%p") %></span>
+  <span class="comment-edit"><%= link_to 'Edit', edit_comment_path(comment) %></span>
 </p>
 <hr />
