--- a/app/views/tours/_voting_line_item.html.erb
+++ b/app/views/tours/_voting_line_item.html.erb
@@ -1,23 +1,22 @@
-<!-- Hide venue proposal if it has not been accepted in the finalized itinerary. -->
-<%= hidden_div_if(@tour.status === "finalized" && tour_stop.status != "yes") do %>
-  <li>
-    <%= tour_stop.total_score %>
-    <%= tour_stop.venue.name %>
-    <%= tour_stop.status %>
+<li>
+  <%= tour_stop.total_score %>
+  <%= tour_stop.venue.name %>
+  <%= hidden_div_if(@tour.status === "finalized" || tour_stop.status === "no") do %>
     <%= button_to "^", votes_tally_path(tour_stop_id: tour_stop.to_param, score: 1) %>
     <%= button_to "v", votes_tally_path(tour_stop_id: tour_stop.to_param, score: -1) %>
-    
-    <%= hidden_div_if(!@tour.organized_by?(@current_user)) do %>
-      <%= render partial: "status_decision_buttons", locals: {tour_stop: tour_stop} %>
-    <% end %>
-    
+  <% end %>
+  
+  <%= hidden_div_if(!@tour.organized_by?(@current_user) || @tour.status === "finalized") do %>
+    <%= render partial: "status_decision_buttons", locals: {tour_stop: tour_stop} %>
+  <% end %>
+  
+  <%= hidden_div_if(@tour.status === "finalized" && tour_stop.status != "yes") do %>
     <%= link_to "Post a comment!", new_comment_path(tour_stop_id: tour_stop.to_param) %>
-    
-    <div class="comment">
-      <%= render partial: "comment", collection: tour_stop.comments, as: :comment %>
-    </div>  
-  </li>
-<% end %>
+  <% end %>
+  <div class="comment">
+    <%= render partial: "comment", collection: tour_stop.comments, as: :comment %>
+  </div>  
+</li>
 
 <!--
 <%= form_tag new_comment_path, method: :get do %>
