CSS: Magellan nav bar works with sufficiently long page content.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,5 +13,9 @@
  *= require_tree .
  *= require_self
  *= require foundation_and_overrides
-
+ *= require font-awesome
  */
+
+ul, ol {
+  list-style-type: none;
+}
