--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -60,11 +60,12 @@ $body-font-weight: $font-weight-normal;
 
 // We use these as default colors throughout
 $primary-color: #008CBA;
-// $secondary-color: #e7e7e7;
+$secondary-color: #e7e7e7;
 // $alert-color: #f04124;
 // $success-color: #43AC6A;
 // $warning-color: #f08a24;
-// $info-color: #a0d3e8;
+$info-color: #a0d3e8;
+$my-color: #630023;
 
 // We use these to make sure border radius matches unless we want it different.
 // $global-radius: 3px;
@@ -689,7 +690,7 @@ $primary-color: #008CBA;
 
 // $include-html-magellan-classes: $include-html-classes;
 
-// $magellan-bg: #fff;
+$magellan-bg: $secondary-color;
 $magellan-padding: 0 !important;
 
 // Off-canvas
@@ -1058,8 +1059,10 @@ $sub-nav-padding: rem-calc(3 16);
 
 // We use these to control the active item styles
 $sub-nav-active-font-weight: $font-weight-normal;
-$sub-nav-active-bg: $primary-color;
+$sub-nav-active-bg: $my-color;
+// hover over clicked link
 $sub-nav-active-bg-hover: scale-color($sub-nav-active-bg, $lightness: -14%);
+// font of clicked link
 $sub-nav-active-color: #fff;
 $sub-nav-active-padding: $sub-nav-padding;
 $sub-nav-active-cursor: default;
@@ -1209,7 +1212,7 @@ $sub-nav-active-cursor: default;
 // $include-html-top-bar-classes: $include-html-classes;
 
 // Background color for the top bar
-// $topbar-bg-color: #333;
+$topbar-bg-color: $my-color;
 // $topbar-bg: $topbar-bg-color;
 
 // Height and margin
