--- a/app/assets/stylesheets/tours.css.scss
+++ b/app/assets/stylesheets/tours.css.scss
@@ -1,3 +1,34 @@
 // Place all the styles related to the Tours controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+/*
+body {
+  background-image: url(image_path('Seoul-Lantern-Festival.jpg'));
+}
+*/
+
+button.borderless-button {
+  background: none;
+  border: none;
+  display: inline;
+  padding: 0;
+  margin: 0;
+  color: inherit;
+}
+
+
+[data-magellan-expedition]>dl.sub-nav {
+  padding: 10px 10px 10px 0;
+  margin-left: 0;
+  
+  dt, dd {
+    margin-left: 0.9rem;
+    margin-bottom: 0;
+    
+    &:not(.active):hover a {
+      border-radius: 3px;
+      background-color: inherit;
+    }
+  }
+}
