--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,22 +1,24 @@
-<%= form_for(@comment) do |f| %>
-  <% if @comment.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@comment.errors.count, "error") %> prohibited this friendship from being saved:</h2>
+<% if flash[:alert] %>
+  <p id="notice"><%= flash[:alert] %></p>
+<% end %>
 
-      <ul>
-      <% @comment.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
+<%= form_for @comment, builder: FoundationFormBuilder::Icons do |f| %>
   <%= f.hidden_field :tour_stop_id %>
-  <div class="field">
-    <%= f.label :text, 'Comment:' %><br>
-    <%= f.text_area :text %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+  
+  <%= f.text_area :text,
+          placeholder: 'The curly fries here are AWESOME.', autofocus: true, required: true,
+          label: { icon: fa_icon('quote-left'), title: 'Comment' } %>
+          
+  <div class="row">
+    <div class="large-6 columns">
+      <%= link_to tour_path(@comment.tour), class: 'large secondary button expand' do %>
+        <%= fa_icon :undo %> Cancel
+      <% end %>
+    </div>
+    <div class="large-6 columns">
+      <%= button_tag class: 'large button expand' do %>
+        <%= fa_icon :save %> Post Comment
+      <% end %>
+    </div>
   </div>
 <% end %>
