--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New Comment</h1>
+<div class="row">
+  <h1>Add a comment:</h1>
+</div>
 
 <%= render 'form' %>
 
-<%= link_to 'Cancel', root_url %>
