--- a/app/views/tour_stops/new.html.erb
+++ b/app/views/tour_stops/new.html.erb
@@ -1,5 +1,9 @@
-<h1>Pick a venue:</h1>
+<div class="row">
+  <h1>Pick a venue:</h1>
+</div>
 
-<%= render 'form' %>
+<div class="row">
+  <%= render 'form' %>  
+</div>
 
-<%= link_to 'Back', tour_stops_path %>
+
