--- a/app/views/tours/_voting_line_item.html.erb
+++ b/app/views/tours/_voting_line_item.html.erb
@@ -1,21 +1,37 @@
 <li>
-  <%= tour_stop.total_score %>
-  <%= tour_stop.venue.name %>
-  <%= hidden_div_if(@tour.status === "finalized" || tour_stop.status === "no") do %>
-    <%= button_to "^", votes_tally_path(tour_stop_id: tour_stop.to_param, score: 1) %>
-    <%= button_to "v", votes_tally_path(tour_stop_id: tour_stop.to_param, score: -1) %>
-  <% end %>
-  
-  <%= hidden_div_if(!@tour.organized_by?(@current_user) || @tour.status === "finalized") do %>
-    <%= render partial: "status_decision_buttons", locals: {tour_stop: tour_stop} %>
-  <% end %>
-  
-  <%= hidden_div_if(@tour.status === "finalized" && tour_stop.status != "yes") do %>
-    <%= link_to "Post a comment!", new_comment_path(tour_stop_id: tour_stop.to_param) %>
-  <% end %>
-  <div class="comment">
-    <%= render partial: "comment", collection: tour_stop.comments, as: :comment %>
-  </div>  
+  <article class="row">
+    <section class="venue row">
+      <div class="large-2 columns">
+        <div class="row">
+          <%= link_to votes_tally_path(tour_stop_id: tour_stop.to_param, score: 1) do %>
+            <%= fa_icon :'chevron-up fw' %>
+          <% end %>
+        </div>
+        <div class="row"><%= tour_stop.total_score %></div>
+        <div class="row">
+          <%= link_to votes_tally_path(tour_stop_id: tour_stop.to_param, score: -1) do %>
+            <%= fa_icon :'chevron-down fw' %>
+          <% end %>
+        </div>
+      </div>
+      <div class="large-8 columns">
+        <div class="row"><%= tour_stop.venue.name %></div>
+      </div>
+      <div class="large-2 columns">
+        <% if @tour.organized_by?(@current_user) && @tour.status === "pending" %>
+          <%= render partial: "status_decision_buttons", locals: {tour_stop: tour_stop} %>
+        <% end %>
+      </div>
+    </section>
+    <section class="comments row">
+      <%= render partial: "comment", collection: tour_stop.comments, as: :comment %>
+      <% if @tour.status === "pending" %>
+        <%= link_to new_comment_path(tour_stop_id: tour_stop.to_param) do %>
+          <%= fa_icon :'comment-o' %>
+        <% end %>
+      <% end %>
+    </section>
+  </article>
 </li>
 
 <!--
