--- a/app/views/tours/edit.html.erb
+++ b/app/views/tours/edit.html.erb
@@ -1,9 +1,5 @@
-<% if flash[:alert] %>
-  <p id="notice"><%= flash[:alert] %></p>
-<% end %>
-
-<h1>Editing tour</h1>
+<div class="row">
+  <h1>Edit the tour:</h1>
+</div>
 
 <%= render 'form' %>
-
-<%= link_to 'Home', root_path %>
