--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,37 +1,23 @@
-<%= form_for(@user) do |f| %>
-  <% if @user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+<%= form_for @user, builder: FoundationFormBuilder do |f| %>
+  <%= f.text_field :name, autofocus: true, required: true,
+          placeholder: "John Doe", label: 'Username' %>
+          
+  <%= f.text_field :email, required: true,
+          placeholder: "johndoe@gmail.com", label: 'E-mail' %>
 
-      <ul>
-      <% @user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <%= f.url_field :avatar_url,
+          placeholder: "http://derp.com/derp.png", label: 'Avatar URL' %>
 
-  <div class="field">
-    <%= f.label :name, 'Username:' %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :email, 'E-mail:' %><br>
-    <%= f.text_field :email %>
-  </div>
-  <div class="field">
-    <%= f.label :avatar_url, '(Optional) Avatar URL:' %><br>
-    <%= f.text_field :avatar_url %>
-  </div>
-  <div class="field">
-    <%= f.label :password, 'Password:' %><br>
-    <%= f.password_field :password %>
-  </div>
-  <div>
-    <%= f.label :password_confirmation, 'Re-enter your password:' %><br>
-    <%= f.password_field :password_confirmation %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+  <%= f.password_field :password, required: true,
+          placeholder: "be clever", label: 'Password' %>
+
+  <%= f.password_field :password_confirmation, required: true,
+          placeholder: "be clever", label: 'Re-enter your password' %>
+
+
+  <div class="row">
+    <%= button_tag class: 'large button expand' do %>
+      <%= fa_icon :plus %> Sign Up
+    <% end %>
   </div>
 <% end %>
